--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  /* color: #646cff; */
   text-decoration: inherit;
 }
 a:hover {
@@ -52,7 +52,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -69,8 +69,13 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
+.no-custom-style {
+  all: unset; /* Unset all inherited and applied styles */
+  display: inline-block; /* Necessary to make button functional */
+  padding: 0; /* Adjust padding or other properties as needed */
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
